<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:background="@color/light_gray">

    <!-- Imagen Logo -->
    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/rick_and_morty"
        android:layout_marginBottom="48dp"
        android:scaleType="fitCenter"/>

    <!-- Campo Email -->
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:layout_marginBottom="16dp"
        android:textColorHint="@color/neon_green_dark"
        android:background="@color/white"/>

    <!-- Campo Contraseña -->
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:layout_marginBottom="24dp"
        android:textColorHint="@color/neon_green_dark"
        android:background="@color/white"/>

    <!-- Botón Iniciar Sesión -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="16sp"
        android:padding="12dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/light_gray"
        android:backgroundTint="@color/neon_green_dark"/>

    <!-- Texto Registrarse -->
    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="16sp"
        android:textStyle="bold"
        android:alpha="0.7"
        android:textAlignment="center"
        android:textColor="@color/neon_green_dark"/>

</LinearLayout>

